# Mintpass

./: DESIGN.md  PRODUCT.md  README.md  local-setup.sh  package-lock.json  package.json
.devcontainer/: setup.sh
anchor/: Anchor.toml
anchor/programs/mintpass-event-registry/: Cargo.toml
anchor/programs/mintpass-reputation/: Cargo.toml
public/: actions.json
src/: Home.css  middleware.ts  providers.tsx  proxy.ts  store.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/actions/: crypto-purchase.ts  purchase.ts
src/app/create/: page.tsx
src/app/dashboard/: page.tsx
src/app/explore/: page.tsx
src/app/organizers/: page.tsx
src/app/tickets/: page.tsx
src/components/: AlertModal.tsx  LandingFooter.tsx  LandingNavBar.tsx  PageNav.tsx  WalletButton.tsx
src/data/: events.ts
src/features/buyer/: BuyerPurchase.tsx  MyTicket.tsx  TicketsList.tsx
src/features/organizer/: CheckInStaff.tsx  CreateEvent.tsx  OrganizerDashboard.tsx  StaffPanel.tsx
src/features/public/: EventDetails.tsx  EventView.tsx  Home.tsx  OrganizerLanding.tsx
src/hooks/: useLiveStats.ts
src/lib/: checkin-pda.ts  escrow.ts  event-pda.ts  metaplex.ts  mock-db.ts  pinata.ts  privy.ts
src/styles/: BuyerPurchase.css  CheckInStaff.css  MyTicket.css  OrganizerDashboard.css  TicketsList.css
src/utils/: qrAuth.ts
src/views/: BuyerPurchase.tsx  CreateEvent.tsx  EventDetails.tsx  EventView.tsx  Home.tsx  MyTicket.tsx  OrganizerDashboard.tsx  OrganizerLanding.tsx  StaffPanel.tsx  TicketsList.tsx
template_codespaces/: README.md  debug.tsx  mock-css.cjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
template_codespaces/anchor/: Anchor.toml  README.md
template_codespaces/anchor/programs/mintpass-checkin/: Cargo.toml
template_codespaces/anchor/programs/mintpass-checkin/src/: lib.rs
template_codespaces/anchor/programs/mintpass-escrow/: Cargo.toml
template_codespaces/anchor/programs/mintpass-escrow/src/: lib.rs
template_codespaces/src/: App.tsx  BuyerPurchase.tsx  CreateEvent.tsx  EventDetails.tsx  Home.css  Home.tsx  MyTicket.tsx  OrganizerDashboard.tsx  StaffPanel.tsx  data.ts  index.css  main.tsx  providers.tsx
template_codespaces/src/components/: PageNav.tsx  (+1 more)
(+27 files in other folders)
