[package]
name = "mintpass-reputation"
version = "0.1.0"
description = "Programa de Reputación on-chain para organizadores de Mintpass"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mintpass_reputation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
