[package]
name = "mintpass-escrow"
version = "0.1.0"
description = "Programa de Escrow para Mintpass — retiene SOL del comprador hasta que el evento sea validado"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mintpass_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
